--- a/templates/cars/car_add.html
+++ b/templates/cars/car_add.html
@@ -19,6 +19,7 @@
                 <div class="form-group">
                     <label class="control-label col-sm-4" for="brand">Marka:</label>
                     <div class="col-sm-8">
+                        {{form.brand.errors}}
                         {{form.brand}}
                     </div>
                 </div>
@@ -26,6 +27,7 @@
                 <div class="form-group">
                     <label class="control-label col-sm-4" for="model">Model:</label>
                     <div class="col-sm-8">
+                        {{form.model.errors}}
                         {{form.model}}
                     </div>
                 </div>
@@ -33,6 +35,7 @@
                 <div class="form-group">
                     <label class="control-label col-sm-4" for="production_year">Rocznik:</label>
                     <div class="col-sm-8">
+                        {{form.production_year.errors}}
                         {{form.production_year}}
                     </div>
                 </div>
@@ -40,6 +43,7 @@
                 <div class="form-group">
                     <label class="control-label col-sm-4" for="engine_volume">Pojemność silnika:</label>
                     <div class="col-sm-8">
+                        {{form.engine_volume.errors}}
                         {{form.engine_volume}}
                     </div>
                 </div>
@@ -47,6 +51,7 @@
                 <div class="form-group">
                     <label class="control-label col-sm-4" for="body_type">Typ nadwozia:</label>
                     <div class="col-sm-8">
+                        {{form.body_type.errors}}
                         {{form.body_type}}
                     </div>
                 </div>
@@ -54,6 +59,7 @@
                 <div class="form-group">
                     <label class="control-label col-sm-4" for="insurance_number">Numer ubezpieczenia:</label>
                     <div class="col-sm-8">
+                        {{form.insurance_number.errors}}
                         {{form.insurance_number}}
                     </div>
                 </div>
@@ -61,6 +67,7 @@
                 <div class="form-group">
                     <label class="control-label col-sm-4" for="need_repair">Stan:</label>
                     <div class="col-sm-8">
+                        {{form.need_repair.errors}}
                         {{form.need_repair}}
                     </div>
                 </div>
@@ -68,6 +75,7 @@
                 <div class="form-group">
                     <label class="control-label col-sm-4" for="is_available">Dostępność:</label>
                     <div class="col-sm-8">
+                        {{form.is_available.errors}}
                         {{form.is_available}}
                     </div>
                 </div>
