--- a/templates/regions/add_driver_to_region.html
+++ b/templates/regions/add_driver_to_region.html
@@ -14,15 +14,17 @@
                 <h2>Przydziel zasoby do wybranego obszaru</h2>
             </div>
             <div class="col-lg-12 col-md-12 col-sm-12 container-resources">
-                <h4>Wybierz kierowcę:</h4>
-                <select class="form-control">
-                    {% for value in add_driver_region %}
-                    <option>{{value.full_name}}</option>
-                    {% endfor %}
-                </select>
-                <button class="btn btn-default save-button">Zapisz</button>
-            </div>
-            
+                <form method="post">
+                    {% csrf_token %}
+                    <h4>Wybierz kierowcę:</h4>
+                    <select name="driver" class="form-control">
+                        {% for value in add_driver_region %}
+                        <option value="{{value.id}}">{{value.full_name}}</option>
+                        {% endfor %}
+                    </select>
+                    <button  type="submit" class="btn btn-default save-button">Zapisz</button>
+                </form>
+            </div> 
         </div>
 
     </div>
